--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -175,11 +175,10 @@
                         android:entries="@array/spinner_gender" />
                 </LinearLayout>
 
-                <Spinner
-                    android:id="@+id/sp_vulSit"
+                <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="20dp" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp" />
 
                 <Button
                     android:id="@+id/btn_uploadCostumer"
