--- a/app/src/main/res/layout/vul_situation.xml
+++ b/app/src/main/res/layout/vul_situation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -7,8 +8,8 @@
     </data>
 
     <CheckBox
-        android:id="@+id/checkbox"
+        android:id="@+id/cb_vulSituation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Checkbox" />
+        tools:text="Situación vulnerable" />
 </layout>
