--- a/app/src/main/res/layout/vul_situation.xml
+++ b/app/src/main/res/layout/vul_situation.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data>
-
-    </data>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <CheckBox
-        android:id="@+id/cb_vulSituation"
-        android:layout_width="wrap_content"
+        android:id="@+id/cb_vulCondition"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Situación vulnerable" />
-</layout>
+        android:text="CheckBox" />
+</LinearLayout>
