--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -192,7 +192,7 @@
                     android:text="Registrar" />
 
                 <TextView
-                    android:id="@+id/textView19"
+                    android:id="@+id/tv_helpReg"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
