--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -77,6 +77,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:gravity="center"
                         android:orientation="vertical">
 
                         <TextView
@@ -117,11 +118,12 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:gravity="center"
                         android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/et_DashPt2"
-                            android:layout_width="match_parent"
+                            android:layout_width="120dp"
                             android:layout_height="120dp"
                             android:layout_gravity="center"
                             android:layout_margin="16dp"
